# war-tac-7

./: .claudeignore  .claudeignore.bak  .codebase_index.json  .env.sample  .gitignore  .mcp.json  ARCHITECTURE.md  MONITORING_TOKEN_USAGE.md  NEXT-CHAT-PROMPT.md  OPTIMIZATION-IMPLEMENTATION-SUMMARY.md  PLAN-OPTIMIZE-ADW-PLAN-ISO.md  README.md  REGRESSION-TESTING-SUMMARY.md  RESTRUCTURE-ANALYSIS.md  RESTRUCTURE-BREAKDOWN-ANALYSIS.md  RESTRUCTURE-EXECUTION-COMMANDS.md  RESTRUCTURE-ISSUES-SUMMARY.md  RESTRUCTURE-STREAMLINED.md  TEST-IMPLEMENTATION-SUMMARY.md  adw_token_analysis_1762872583.txt  adw_token_analysis_1762872728.txt  config.yaml.sample  new-features.md  optimization_analysis.md  optimization_test_spec.json  playwright-mcp-config.json  validation_report.md
projects/tac-webbuilder/: .codebase_index.json  .env.sample  .gitignore  README.md  config.yaml.sample  pyproject.toml
projects/tac-webbuilder/.claude/: settings.json
projects/tac-webbuilder/adws/: README.md  adw_build_iso.py  adw_document_iso.py  adw_patch_iso.py  adw_plan_build_document_iso.py  adw_plan_build_iso.py  adw_plan_build_review_iso.py  adw_plan_build_test_iso.py  adw_plan_build_test_review_iso.py  adw_plan_iso.py  adw_review_iso.py  adw_sdlc_iso.py  adw_sdlc_zte_iso.py  adw_ship_iso.py  adw_test_iso.py
projects/tac-webbuilder/app/: __init__.py
projects/tac-webbuilder/app/server/: .coverage  (+4 more)
projects/tac-webbuilder/core/: __init__.py  config.py
projects/tac-webbuilder/docs/: api.md  architecture.md  cli.md  examples.md  playwright-mcp.md  troubleshooting.md  web-ui.md
projects/tac-webbuilder/interfaces/: __init__.py
projects/tac-webbuilder/scripts/: integrate_existing.sh  setup.sh  setup_new_project.sh  start_cli.sh  start_web.sh  validate_adw.py
projects/tac-webbuilder/templates/: issue_template.md  template_structure.json
projects/tac-webbuilder/tests/: README.md  __init__.py  conftest.py  test_config.py  test_nl_workflow_integration.py
(+352 files in other folders)
